Adds PurchaseNature model in order to specify parameters for purchases

--- a/app/views/prices/_amount_form.html.haml
+++ b/app/views/prices/_amount_form.html.haml
@@ -3,4 +3,4 @@
   -f.field :price, :category_id, :choices=>{:reflection=>:entity_categories}, :new=>true
   -f.field :price, :pretax_amount
   -f.field :price, :tax_id, :choices=>{:reflection=>:taxes}, :new=>true
-  -f.field :price, :currency_id, :choices=>{:reflection=>:currencies}
+  -f.field :price, :currency, :choices=>currencies
