Checks tests and fixes concerned bugs

--- a/app/views/cash_transfers/show.html.haml
+++ b/app/views/cash_transfers/show.html.haml
@@ -5,12 +5,10 @@
   -l.attribute :number
   -l.attribute :comment
   -l.attribute :accounted_at
-  -l.attribute :currency
   -l.attribute :emitter_cash, :url=>true
   -l.attribute :emitter_amount
-  -l.attribute :emitter_currency
   -l.attribute :emitter_journal_entry, :url=>true
+  -l.attribute :currency_rate
   -l.attribute :receiver_cash, :url=>true
   -l.attribute :receiver_amount
-  -l.attribute :receiver_currency
   -l.attribute :receiver_journal_entry, :url=>true
