--- a/app/views/journal_entry_lines/_row_form.html.haml
+++ b/app/views/journal_entry_lines/_row_form.html.haml
@@ -13,7 +13,7 @@
   %td.dec=text_field_tag "lines[#{id}][original_credit]", (line.original_credit||0.0), :size=>10, :id=>"lines_#{id}_original_credit", :class=>"original-credit", :href=>url_for(:controller=>:journal_entry_lines, :action=>:new), "data-update"=>"#lines", "data-update-at"=>:bottom, "data-type"=>:html, "data-add-line-unless"=>"#total", "data-with"=>"#lines_#{id}_name,#entry-original-debit,#entry-original-credit,#journal_id,#journal_entry_printed_on", "data-exclusive-nullify"=>"#lines_#{id}_original_debit"
   %td=@journal.currency
   %td.act=link_to(image_tag(theme_button(:destroy), :border=>0), "#", "data-remove"=>"##{id}, ##{id}-errors")
--if @journal.currency != @financial_year.currency
+-if @financial_year and @journal and @journal.currency != @financial_year.currency
   %tr
     %td.dec{"colspan"=>2}
     %td.dec.debit{"data-use"=>"#lines_#{id}_original_debit,#journal_entry_original_currency_rate", "data-calculate"=>"mul"}
