--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -1,19 +1,4 @@
-/*
-@font-face {font-family: "Droid Sans"; src: url(../fonts/DroidSans.ttf)}
-@font-face {font-family: "Droid Sans"; src: url(../fonts/DroidSans-Bold.ttf); font-weight: bold }
-
-@font-face {font-family: "Open Sans"; src: url(../fonts/OpenSans-Regular.ttf)}
-@font-face {font-family: "Open Sans"; src: url(../fonts/OpenSans-Bold.ttf); font-weight: bold }
-@font-face {font-family: "Open Sans"; src: url(../fonts/OpenSans-Italic.ttf); font-style: italic; }
-@font-face {font-family: "Open Sans"; src: url(../fonts/OpenSans-BoldItalic.ttf); font-weight: bold; font-style: italic; }
-*/
-/*
-@font-face {font-family: "Open Sans"; src: url(../fonts/OpenSans-Light.ttf)}
-@font-face {font-family: "Open Sans"; src: url(../fonts/OpenSans-Regular.ttf); font-weight: bold }
-@font-face {font-family: "Open Sans"; src: url(../fonts/OpenSans-LightItalic.ttf); font-style: italic; }
-@font-face {font-family: "Open Sans"; src: url(../fonts/OpenSans-Italic.ttf); font-weight: bold; font-style: italic; }
-*/
-* {margin:0; padding:0; font-size: 100%; font-family: "Open Sans", "Liberation Sans", helvetica, arial, sans-serif;}
+* {margin:0; padding:0; font-size: 100%; font-family: "Open Sans", "Liberation Sans", helvetica, sans-serif;}
 
 html { background: #F1F1F1;/*background: #688ED8 #C9D7F1;*/}
 fieldset {padding: 4px 8px 8px; margin: 1px 1px 8px; border: 1px solid #DDD;/* border:1px solid #95b0e4; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; behavior: url(/pie.htc); background: url(../images/columns.png) repeat-x top; */}
@@ -692,7 +677,7 @@ table.profile td { padding: 1px 2px; }
 div.profile { clear: both; border-left: 1px solid #000; border-top: 1px solid #000;}
 div.profile .md { float: right; }
 
-.profile * { font-size: 10px; font-family: monospace; }
+.profile * { font-size: 10px; font-family: "Liberation Mono", monospace; }
 .profile .dec { text-align: right; width: 15ex;}
 .profile .mdc { text-align: right; width: 7ex;}
 .profile .tit { border : 1px solid transparent; cursor: pointer;}
