--- a/app/assets/stylesheets/themes/tekyla/screen.css.scss
+++ b/app/assets/stylesheets/themes/tekyla/screen.css.scss
@@ -17,59 +17,6 @@
 @import "compass/utilities";
 $experimental-support-for-svg: true;
 
-@mixin btn { 
-  margin: 0 -.5px 8px; 
-  padding: 4px 6px; 
-  @include inline-block;
-  @include background-image(linear-gradient(#EEE, #DDD));
-  @include box-shadow(0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05));
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  font-weight: bold;
-  * { 
-   vertical-align: middle;
-  }
-  .text { 
-    line-height: 16px;
-    color: #555;
-    @include text-shadow(1px 1px 1px #FFF);
-  }
-  .icon { 
-    background-repeat: no-repeat; 
-    width: 16px;
-    height: 16px;
-    margin: 0 4px 0 0;
-    @include inline-block;
-  }
-  &:hover {
-    @include background-image(linear-gradient(lighten(#688ED8, 8%), #688ED8));
-    &, .text {
-      color: #FFF; 
-      @include text-shadow(-1px -1px 1px #555);
-      text-decoration: none;
-    }
-  }
-  &:active {
-    @include background-image(linear-gradient(#688ED8, darken(#688ED8, 8%)));
-    &, .text {
-      color: #FFF; 
-      @include text-shadow(-1px -1px 1px #555);
-      text-decoration: none;
-    }
-  }
-  html[dir="ltr"] .toolbar &:first-child, html[dir="rtl"] .toolbar &:last-child, &.alone {
-    @include border-top-left-radius(5px);
-    @include border-bottom-left-radius(5px);
-  }
-  html[dir="ltr"] .toolbar &:last-child, html[dir="rtl"] .toolbar &:first-child, &.alone {
-    @include border-top-right-radius(5px);
-    @include border-bottom-right-radius(5px);
-  }
-}
-
-
-
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video, input, textarea, select, options {margin:0; padding:0; font-family: "Open Sans", "Liberation Sans", helvetica, sans-serif;}
 
 html { background: #F1F1F1;/*background: #688ED8 #C9D7F1;*/}
@@ -89,8 +36,40 @@ input[type="submit"] { padding: 1px 4px; }
 
 /*a img { padding: 0; margin: 0; display:block; border: none;}*/
 
+$icons-16-layout: smart;
 @import "themes/tekyla/icons-16/*.png";
+
 @include all-icons-16-sprites;
+
+$buttons-names: new edit destroy search validate cancel lock unlock action up down left right configure column table duplicate point mark unmark true false page spreadsheet print filter mail nomail sort check divide load logout increment decrement;
+$buttons-states: hover active disabled normal;
+$buttons-interval: 24px;
+@mixin buttons-background { 
+  background: url(/assets/themes/tekyla/icons-16.png) no-repeat;
+}
+
+
+$i: 0;
+@each $button-name in $buttons-names { 
+  .btn.#{$button-name} {
+    .icon {
+      height: $buttons-interval*2/3;
+      width: $buttons-interval*2/3;
+      @include buttons-background;
+      background-position: (-$buttons-interval*$i) (-$buttons-interval*1);
+    }
+    &:hover {
+      .icon { background-position: (-$buttons-interval*$i) (-$buttons-interval*0);}
+    }
+    &:active {
+      .icon { background-position: (-$buttons-interval*$i) (-$buttons-interval*0); }
+    }
+    &[disabled] {
+      .icon { background-position: (-$buttons-interval*$i) (-$buttons-interval*2); }
+    }
+  }
+  $i: $i + 1;
+}
 
 
 /*
@@ -471,7 +450,54 @@ input.invalid, textarea.invalid, select.invalid { border: 1px solid red !importa
 
 /*#E7E7E7*/
 .btn {
-  @include btn;
+  margin: 0 -.5px 8px; 
+  padding: 4px 6px; 
+  @include inline-block;
+  @include background-image(linear-gradient(#EEE, #DDD));
+  @include box-shadow(0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05));
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  font-weight: bold;
+  * { 
+   vertical-align: middle;
+  }
+  .text { 
+    line-height: 16px;
+    color: #555;
+    @include text-shadow(1px 1px 1px #FFF);
+  }
+  .icon { 
+    background-repeat: no-repeat; 
+    width: 16px;
+    height: 16px;
+    margin: 0 4px 0 0;
+    @include inline-block;
+  }
+  &:hover {
+    @include background-image(linear-gradient(lighten(#688ED8, 8%), #688ED8));
+    &, .text {
+      color: #FFF; 
+      @include text-shadow(-1px -1px 1px #555);
+      text-decoration: none;
+    }
+  }
+  &:active {
+    @include background-image(linear-gradient(#688ED8, darken(#688ED8, 8%)));
+    &, .text {
+      color: #FFF; 
+      @include text-shadow(-1px -1px 1px #555);
+      text-decoration: none;
+    }
+  }
+  html[dir="ltr"] .toolbar &:first-child, html[dir="rtl"] .toolbar &:last-child, &.alone {
+    @include border-top-left-radius(5px);
+    @include border-bottom-left-radius(5px);
+  }
+  html[dir="ltr"] .toolbar &:last-child, html[dir="rtl"] .toolbar &:first-child, &.alone {
+    @include border-top-right-radius(5px);
+    @include border-bottom-right-radius(5px);
+  }
 }
 
 .toolbar { 
